--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,31 +1,20 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(lanefollowing)
+project(lane_tracer)
 
 find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  std_msgs
+  rospy
+  sensor_msgs
   cv_bridge
-  image_transport
+  opencv4
 )
 
-find_package(OpenCV 4 REQUIRED)
-find_package(dynamixel_sdk REQUIRED)
-
-catkin_package(
-  CATKIN_DEPENDS roscpp std_msgs cv_bridge image_transport
-  DEPENDS OpenCV dynamixel_sdk
-)
+catkin_package()
 
 include_directories(
   ${catkin_INCLUDE_DIRS}
-  ${OpenCV_INCLUDE_DIRS}
-  ${dynamixel_sdk_INCLUDE_DIRS}
 )
 
-add_executable(${PROJECT_NAME}_node src/lanefollowing.cpp)
-
-target_link_libraries(${PROJECT_NAME}_node
-  ${catkin_LIBRARIES}
-  ${OpenCV_LIBRARIES}
-  ${dynamixel_sdk_LIBRARIES}
+install(PROGRAMS
+  src/lane_following_node.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
