--- a/package.xml
+++ b/package.xml
@@ -1,25 +1,20 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>lanefollowing</name>
-  <version>0.0.0</version>
-  <description>The lanefollowing package</description>
+  <name>lane_tracer</name>
+  <version>0.0.1</version>
+  <description>The lane_tracer package</description>
 
   <maintainer email="your_email@example.com">Your Name</maintainer>
-
-  <license>BSD</license>
+  <license>Apache 2.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>roscpp</depend>
-  <depend>std_msgs</depend>
+  <depend>rospy</depend>
+  <depend>sensor_msgs</depend>
   <depend>cv_bridge</depend>
-  <depend>image_transport</depend>
+  <depend>opencv4</depend>
 
-  <build_depend>opencv4</build_depend>
-  <build_depend>dynamixel_sdk</build_depend>
-
-  <exec_depend>opencv4</exec_depend>
-  <exec_depend>dynamixel_sdk</exec_depend>
+  <build_depend>roslint</build_depend>
 
   <export>
     <build_type>catkin</build_type>
